--- a/Kubernetes/app-deployment.yaml
+++ b/Kubernetes/app-deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: flask-app-container
-          image: https://console.cloud.google.com/artifacts/docker/mostafaeid/us-east1/my-images?project=mostafaeid/flask-app:latest
+          image: us-east1-docker.pkg.dev/MostafaEid/my-images/flask-app:latest
           ports:
             - containerPort: 8081 
